--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,70 @@
 body {
-    font-family: "Roboto", sans-serif;    
-    color:  #434455;
-    background-color:  #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
 }
+
+ol,
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 /* header */
 
-.header {
-    
+.header {}
+
+.header-nav {}
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
 }
 
-.header-nav {
-
+.header-logo .logo2 {
+    color: #2e2f42;
 }
 
-.header-logo-1 {
+.nav-list {}
 
+.nav-item {}
 
+.nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
-.header-logo-2 {
-
+.header-addrees {
+    font-style: normal;
 }
 
-.li-item1 {
-    
+.address-list {}
+
+.address-item {}
+
+.address-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.address-link:hover,
+.address-link:focus {
+    color: #404bbf;
 }
 
 /* main */
@@ -33,18 +74,18 @@ body {
     background-color: #2E2F42;
 }
 
-.main-section1-txt {    
+.main-section1-txt {
     text-align: center;
     color: #F4F4FD;
 }
 
-.main-section1-btn {    
-    justify-content: flex-start;         
+.main-section1-btn {
+    text-align: center;
     background: #4D5AE5;
     font-weight: 500;
 }
 
-.main-section3 {    
+.main-section3 {
     background: #F4F4FD;
 }
 
@@ -53,24 +94,21 @@ body {
     color: #2E2F42;
 }
 
-.li-item3 {
-   
-}
+.li-item3 {}
 
 .main-section4-mtxt {
     text-align: center;
     color: #2E2F42;
 }
 
-.footer1 {
+.footer {
     width: 1440px;
     height: 312px;
     background: #2E2F42;
 }
 
-.footer-logo {
-    margin-left: 156px;
-    margin-top: 100px;
+.footer-logo .logo2 {
+    color: #f4f4fd;
 }
 
 .footer-txt {
