--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ a {
 }
 
 .first-section-btn {
-    cursor: pointer;
+    font-family: "Roboto", sans-serif; 
     letter-spacing: 0.04em;
     line-height: 1.5;
     font-weight: 500;
@@ -131,8 +131,7 @@ a {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
+    letter-spacing: 0.02em;   
     color: #2e2f42;
 }
 
