check third-section

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,8 @@ a {
 }
 
 .first-section-btn {
-    font-family: "Roboto", sans-serif; 
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
     letter-spacing: 0.04em;
     line-height: 1.5;
     font-weight: 500;
@@ -106,7 +107,9 @@ a {
 
 .second-section-list {}
 
-.second-section-item {
+.second-section-item {}
+
+.second-section-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -114,11 +117,11 @@ a {
     color: #2e2f42;
 }
 
-.second-section-name {}
-
 .second-section-txt {
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #434455;
 }
 
 /* third section */
@@ -128,10 +131,11 @@ a {
 }
 
 .third-section-head {
+    text-transform: capitalize;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
-    letter-spacing: 0.02em;   
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
@@ -166,9 +170,10 @@ a {
 .fourth-section {}
 
 .fourth-section-head {
+    text-transform: capitalize;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
